Refactor stage APIs to accept multiple stage keys in request body
- Changed template and assignable-users endpoints from GET with query params to POST with request body
- Created StageKeysRequest DTO for request payload
- Moved all business logic from controller to service layer
- Added getAssignableUsersForStages method to StageReadService
- Added processStageKeys helper method for normalization
- Improved error handling in service layer
- Controller now only handles HTTP concerns